@@ -46,8 +46,6 @@ public class GameLogic {
         this.app = app;
         g = new GameState();
         new Pane();
-        app.pieceGroup.getChildren().clear();
-        //app.capturedPiecesTracker.reset();
     }
 
     public boolean isGameOver(GameState board){
@@ -66,6 +64,8 @@ public class GameLogic {
     }
 
     private void askForMove() {
+        app.updateGlows();
+        app.updateEvaluationBar();
         System.out.println();
         if (g.isWhiteTurn) {
             System.out.println("White's turn");
@@ -90,9 +90,10 @@ public class GameLogic {
         }
     }
 
-    public static ArrayList<Turn> getLegalTurns(GameState originalGS) {
-        ArrayList<Move> availableMoves = getPossibleMoves(originalGS);
+    public static ArrayList<Turn> getLegalTurns(GameState g) {
+        ArrayList<Move> availableMoves = getPossibleMoves(g);
         if (availableMoves.isEmpty()) {
+            g.setGameOver(true);
             return new ArrayList<>();
         }
         if (availableMoves.get(0).isNormal()) {
@@ -102,7 +103,7 @@ public class GameLogic {
         Set<Piece> pieces = Piece.movesToPieces(availableMoves);
         int maxCaptures = 0;
         for (Piece piece : pieces) {
-            ArrayList<Turn> pieceTurns = getLegalTurns(piece, originalGS);
+            ArrayList<Turn> pieceTurns = getLegalTurns(piece, g);
             for (Turn turn : pieceTurns) {
                 //TODO: add 2 kings rule
                 if (turn.getMoves().size() > maxCaptures) {
@@ -122,9 +123,6 @@ public class GameLogic {
     public static ArrayList<Turn> getLegalTurns(Piece piece, GameState originalGS) {
         GameState g = new GameState(originalGS);
         ArrayList<Move> availableMoves = getPossibleMoves(piece, g);
-        if (availableMoves.isEmpty()) {
-            return new ArrayList<>();
-        }
         if (availableMoves.get(0).isNormal()) {
             return Turn.copyMovesToTurns(availableMoves);
         }
@@ -245,40 +243,44 @@ public class GameLogic {
             askForMove();
             return false;
         }
-    
-        ArrayList<Turn> legalTurns = getLegalTurns(g);
-    
+        
+        if (g.getCurrentTurn().isEmpty()) {
+            g.setPossibleTurns(getLegalTurns(g));
+        }
+        else if (piece != g.getCurrentTurn().getLast().getPiece()) {
+            piece.abortMove();
+            askForMove();
+            return false;  
+        }
+        List<Turn> legalTurns = g.getPossibleTurns();
+        
         // Handle normal moves when no captures are available
-        if (move.isNormal() && !legalTurns.get(0).isShot()) {
+        if (move.isNormal() && !legalTurns.getFirst().isShot()) {
             System.out.println("No available captures, making normal move");
             movePiece(move);
-            app.updateEvaluationBar();
-            app.updateGlows(); // Update glowing after the normal move
             askForMove();
             return true;
         }
     
+        int i = g.getCurrentTurn().getMoves().size();
         // Handle capture moves
         for (Turn turn : legalTurns) {
-            Move curMove = turn.getMoves().getFirst();
+            Move curMove = turn.getMoves().get(i);
             if (curMove.equals(move)) {
                 if (curMove.isTurnEnding()) {
                     move.setTurnEnding(true);
                 }
                 movePiece(move);
                 app.updateCaptureMessage(" ");
-                app.updateEvaluationBar();
     
                 // If the turn ends after the move
                 if (curMove.isTurnEnding()) {
                     System.out.println("Made all available captures");
-                    app.updateGlows(); // Update glowing after the turn ends
                     askForMove();
                     return true;
                 } else {
                     // Handle additional captures in the same turn
                     System.out.println("Made capture, can take again");
-                    app.updateGlows(); // Update glowing to reflect new capture options
                     askForMove();
                     return true;
                 }
@@ -298,7 +300,6 @@ public class GameLogic {
             piece.abortMove();
             app.updateCaptureMessage(" ");
             System.out.println("Can take again");
-            app.updateGlows(); // Update glowing for additional capture options
             askForMove();
             return true;
         }
@@ -389,10 +390,8 @@ public class GameLogic {
     }   
 
     public void undoLastMove(GameState g) {
-        Move move = g.getMovesPlayed().removeLast();
-        if (move.isTurnEnding()) {
-            askForMove();
-        }
+        Move move = g.getMovesPlayed().getLast();
+        g.undoMove(move);
         if (move.isCapture()) {
             Capture capture = (Capture) move;
             Piece capturedPiece = capture.getCapturedPiece();
@@ -404,6 +403,7 @@ public class GameLogic {
             }
             app.pieceGroup.getChildren().add(capturedPiece.getPieceDrawer());
         }
+        askForMove();
     }
 
     public double evaluateTurn(Turn turn, GameState originalGS) {
